Update integration_by_parts.qmd some typos.

--- a/quarto/integrals/integration_by_parts.qmd
+++ b/quarto/integrals/integration_by_parts.qmd
@@ -192,7 +192,7 @@ Combining gives the answer:
 $$
 \int_a^b x^2 e^x dx
 = (x^2 \cdot e^x)\big|_a^b - 2( (xe^x - e^x)\big|_a^b ) =
-e^x(x^2  - 2x - 1) \big|_a^b.
+e^x(x^2  - 2x + 2) \big|_a^b.
 $$
 
 In fact, it isn't hard to see that an integral of $x^m e^x$, $m$ a positive integer, can be handled in this manner. For example, when $m=10$, `SymPy` gives:
@@ -220,7 +220,7 @@ Now we let $u = \cos(x)$ and again $dv=e^x dx$:
 
 
 $$
-\int e^x \sin(x)dx = \sin(x) e^x - \int \cos(x) e^x dx = \sin(x)e^x - \cos(x)e^x - \int (-\sin(x))e^x dx.
+\int e^x \sin(x)dx = \sin(x) e^x - \int \cos(x) e^x dx = \sin(x)e^x - \cos(x)e^x + \int (-\sin(x))e^x dx.
 $$
 
 But simplifying this gives:
@@ -245,8 +245,8 @@ Positive integer powers of trigonometric functions can be addressed by this tech
 
 
 \begin{align*}
-\int \cos(x)^n dx &= \cos(x)^{n-1} \cdot (\sin(x)) - \int (\sin(x)) ((n-1)\sin(x) \cos(x)^{n-2}) dx \\
-&= \sin(x) \cos(x)^{n-1} + (n-1)\int \sin^2(x) \cos(x)^{n-1} dx\\
+\int \cos(x)^n dx &= \cos(x)^{n-1} \cdot (\sin(x)) + \int (\sin(x)) ((n-1)\sin(x) \cos(x)^{n-2}) dx \\
+&= \sin(x) \cos(x)^{n-1} + (n-1)\int \sin^2(x) \cos(x)^{n-2} dx\\
 &= \sin(x) \cos(x)^{n-1} + (n-1)\int (1 - \cos(x)^2) \cos(x)^{n-2} dx\\
 &= \sin(x) \cos(x)^{n-1} + (n-1)\int \cos(x)^{n-2}dx - (n-1)\int \cos(x)^n dx.
 \end{align*}
@@ -259,7 +259,7 @@ $$
 \int \cos(x)^n dx = \frac{1}{n}\sin(x) \cos(x)^{n-1} + \frac{n-1}{n}\int \cos(x)^{n-2}dx.
 $$
 
-This is called a reduction formula as it reduces the problem from an integral with a power of $n$ to one with a power of $n - 2$, so could be repeated until the remaining indefinite integral required knowing either $\int \cos(x) dx$ (which is $-\sin(x)$) or $\int \cos(x)^2 dx$, which by a double angle formula application, is $x/2 - \sin(2x)/4$.
+This is called a reduction formula as it reduces the problem from an integral with a power of $n$ to one with a power of $n - 2$, so could be repeated until the remaining indefinite integral required knowing either $\int \cos(x) dx$ (which is $-\sin(x)$) or $\int \cos(x)^2 dx$, which by a double angle formula application, is $x/2 + \sin(2x)/4$.
 
 
 `SymPy` is quite able to do this repeated bookkeeping. For example with $n=10$:
@@ -275,7 +275,7 @@ integrate(cos(𝒙)^10, 𝒙)
 The visual interpretation of integration by parts breaks area into two pieces, the one labeled "B" looks like it would be labeled "A" for an inverse function for $f$. Indeed, integration by parts gives a means to possibly find antiderivatives for inverse functions.
 
 
-Let $uv = x f^{-1}(x)$. Then we have $[uv]' = u'v + uv' = f^{-1}(x) + x [f^{-1}(x)]'$. So, up to a constant $uv = \int [uv]'dx = \int f^{-1}(x) + \int  x [f^{-1}(x)]'$. Re-expressing gives:
+Let $uv = x f^{-1}(x)$. Then we have $[uv]' = u'v + uv' = f^{-1}(x) + x [f^{-1}(x)]'$. So, up to a constant $uv = \int [uv]'dx = \int f^{-1}(x)dx + \int  x [f^{-1}(x)]'dx$. Re-expressing gives:
 
 
 
@@ -352,7 +352,7 @@ $$
 \text{error}_i = -(\frac{(t+A)^2}{2} + B)f'(t+x_i)\big|_0^h + \int_0^h (\frac{(t+A)^2}{2} + B) \cdot f''(t+x_i) dt.
 $$
 
-With $A=-h/2$, $B$ is chosen so $(t+A)^2/2 + B = 0$, or  $B=-h^2/8$. The error becomes
+With $A=-h/2$, $B$ is chosen so $(t+A)^2/2 + B = 0$ at endpoints, or  $B=-h^2/8$. The error becomes
 
 
 $$
@@ -411,7 +411,7 @@ let
 end
 ```
 
-We added a rectangle for a Riemann sum for $t_i = \pi/3$ and $t_{i+1} = \pi/3 + \pi/8$. The height of this rectangle if $y(t_i)$, the base is of length $x(t_i) - x(t_{i+1})$ *given* the orientation of how the circular curve is parameterized (counter clockwise here).
+We added a rectangle for a Riemann sum for $t_i = \pi/3$ and $t_{i+1} = \pi/3 + \pi/8$. The height of this rectangle is $y(t_i)$, the base is of length $x(t_i) - x(t_{i+1})$ *given* the orientation of how the circular curve is parameterized (counter clockwise here).
 
 
 Taking this Riemann sum approach, we can approximate the area under the curve parameterized by $(u(t), v(t))$ over the time range $[t_i, t_{i+1}]$ as a rectangle with height $y(t_i)$ and base $x(t_{i}) - x(t_{i+1})$. Then we get, as expected:
