Update 40 & 41 some typos.

--- a/quarto/integrals/improper_integrals.qmd
+++ b/quarto/integrals/improper_integrals.qmd
@@ -70,7 +70,7 @@ Let $f(x)$ be a reasonable function, so reasonable that for any $a < b$ the func
 What needs to be the case so that we can discuss the integral over the entire real number line?
 
 
-Clearly something. The function $f(x) = 1$ is reasonable by the idea above. Clearly the integral over and $[a,b]$ is just $b-a$, but the limit over an unbounded domain would be $\infty$. Even though limits of infinity can be of interest in some cases, not so here. What will ensure that the area is finite over an infinite region?
+Clearly something. The function $f(x) = 1$ is reasonable by the idea above. Clearly the integral over $[a,b]$ is just $b-a$, but the limit over an unbounded domain would be $\infty$. Even though limits of infinity can be of interest in some cases, not so here. What will ensure that the area is finite over an infinite region?
 
 
 Or is that even the right question. Now consider $f(x) = \sin(\pi x)$. Over every interval of the type $[-2n, 2n]$ the area is $0$, and over any interval, $[a,b]$ the area never gets bigger than $2$. But still this function does not have a well defined area on an infinite domain.
@@ -144,7 +144,7 @@ $$
 for any finite $a$. This is because, $F(M) = e^x$ and this has a limit as $x$ goes to $-\infty$, but not $\infty$.
 
 
-  * Let $f(x) = x e^{-x^2}$. This function has an integral over $[0, \infty)$ and more generally $(-\infty, \infty)$. To see, we note that as it is an odd function, the area from $0$ to $M$ is the opposite sign of that from $-M$ to $0$. So $\lim_{M \rightarrow \infty} (F(M) - F(0)) = \lim_{M \rightarrow -\infty} (F(0) - (-F(\lvert M\lvert)))$. We only then need to investigate the one limit. But we can see by substitution with $u=x^2$, that an antiderivative is $F(x) = (-1/2) \cdot e^{-x^2}$. Clearly, $\lim_{M \rightarrow \infty}F(M) = 0$, so the answer is well defined, and the area from $0$ to $\infty$ is just $e/2$. From $-\infty$ to $0$ it is $-e/2$ and the total area is $0$, as the two sides "cancel" out.
+  * Let $f(x) = x e^{-x^2}$. This function has an integral over $[0, \infty)$ and more generally $(-\infty, \infty)$. To see, we note that as it is an odd function, the area from $0$ to $M$ is the opposite sign of that from $-M$ to $0$. So $\lim_{M \rightarrow \infty} (F(M) - F(0)) = \lim_{M \rightarrow -\infty} (F(0) - (-F(\lvert M\lvert)))$. We only then need to investigate the one limit. But we can see by substitution with $u=x^2$, that an antiderivative is $F(x) = (-1/2) \cdot e^{-x^2}$. Clearly, $\lim_{M \rightarrow \infty}F(M) = 0$, so the answer is well defined, and the area from $0$ to $\infty$ is just $1/2$. From $-\infty$ to $0$ it is $-1/2$ and the total area is $0$, as the two sides "cancel" out.
   * Let $f(x) = \sin(x)$. Even though $\lim_{M \rightarrow \infty} (F(M) - F(-M) ) = 0$, this function is not integrable. The fact is we need *both* the limit $F(M)$ and $F(-M)$ to exist as $M$ goes to $\infty$. In this case, even though the area cancels if $\infty$ is approached at the same rate, this isn't sufficient to guarantee the two limits exists independently.
 
 
@@ -155,7 +155,7 @@ We first find an antiderivative using the $u$-substitution $u(x) = \log(x)$:
 
 
 $$
-\int_e^M \frac{e}{x \log(x)^{2}} dx
+\int_e^M \frac{1}{x \log(x)^{2}} dx
 = \int_{\log(e)}^{\log(M)} \frac{1}{u^{2}} du
 = \frac{-1}{u} \big|_{1}^{\log(M)}
 = \frac{-1}{\log(M)} - \frac{-1}{1}
@@ -184,7 +184,7 @@ f(x) = exp(-x^2/2)
 quadgk(f, -Inf, Inf)
 ```
 
-(If may not be obvious, but this is $\sqrt{2\pi}$.)
+(It may not be obvious, but this is $\sqrt{2\pi}$.)
 
 
 ## Singularities
@@ -196,7 +196,7 @@ Suppose $\lim_{x \rightarrow c}f(x) = \infty$ or $-\infty$. Then a Riemann sum t
 However, if $c$ is isolated, we can get close to $c$ and see how the area changes.
 
 
-Suppose $a < c$, we define $\int_a^c f(x) dx = \lim_{M \rightarrow c-} \int_a^c f(x) dx$. If this limit exists, the definite integral with $c$ is well defined. Similarly, the integral from $c$ to $b$, where $b > c$, can be defined by a right limit going to $c$. The integral from $a$ to $b$ will exist if both the limits are finite.
+Suppose $a < c$, we define $\int_a^c f(x) dx = \lim_{M \rightarrow c-} \int_a^M f(x) dx$. If this limit exists, the definite integral with $c$ is well defined. Similarly, the integral from $c$ to $b$, where $b > c$, can be defined by a right limit going to $c$. The integral from $a$ to $b$ will exist if both the limits are finite.
 
 
 ##### Examples
@@ -506,7 +506,7 @@ radioq(choices, answ, keep_order=true)
 ---
 
 
-Let $f(x) = 1 + 4x^2$. What can you say about $\int_1^\infty f(x) dx$, as $f(x) \leq 1/x^2$ on $[1, \infty)$?
+Let $f(x) = 1/(1 + 4x^2)$. What can you say about $\int_1^\infty f(x) dx$, as $f(x) \leq 1/x^2$ on $[1, \infty)$?
 
 
 ```{julia}
@@ -516,7 +516,7 @@ choices =[
 "It is convergent",
 "It is divergent",
 "Can't say"]
-answ = 2
+answ = 1
 radioq(choices, answ, keep_order=true)
 ```
 
