--- a/quarto/integrals/partial_fractions.qmd
+++ b/quarto/integrals/partial_fractions.qmd
@@ -86,7 +86,7 @@ $$
 a(x) Q(x) + b(x) q(x) = 1.
 $$
 
-Then dividing by $q^k(x)Q(x)$ gives the decomposition
+Then dividing by $q(x)^kQ(x)$ gives the decomposition
 
 
 $$
@@ -175,7 +175,7 @@ $$
 \frac{Ax + B}{((ax)^2 \pm 1)^j}
 $$
 
-This can be done by finding a $d$ so that $a(x-d)^2 + b(x-d) + c = dx^2 + e = e((\sqrt{d/e}x^2 \pm 1)$.
+This can be done by finding a $d$ so that $a(x-d)^2 + b(x-d) + c = dx^2 + e = e((\sqrt{d/e}x)^2 \pm 1)$.
 
 
 The integrals of the type $Ax/((ax)^2 \pm 1)$ can completed by $u$-substitution, with $u=(ax)^2 \pm 1$.
@@ -210,7 +210,7 @@ In [Bronstein](http://www-sop.inria.fr/cafe/Manuel.Bronstein/publications/issac9
 
 
 \begin{align*}
-\int \frac{A}{(x-a)^j} &= \frac{A}{1-j}\frac{1}{(x-a)^{1-j}}\\
+\int \frac{A}{(x-a)^j} &= \frac{A}{1-j}\frac{1}{(x-a)^{j-1}}\\
 \int \frac{A}{x-a}     &= A\log(x-a)\\
 \int \frac{Bx+C}{x^2 + bx + c}     &= \frac{B}{2} \log(x^2 + bx + c) + \frac{2C-bB}{\sqrt{4c-b^2}}\cdot \arctan\left(\frac{2x+b}{\sqrt{4c-b^2}}\right)\\
 \int \frac{Bx+C}{(x^2 + bx + c)^j} &= \frac{B' x + C'}{(x^2 + bx + c)^{j-1}} + \int \frac{C''}{(x^2 + bx + c)^{j-1}}
@@ -466,7 +466,7 @@ answ = 3
 radioq(choices, answ, keep_order=true)
 ```
 
-##### Question
+###### Question
 
 
 The partial fraction decomposition, as presented, factors the denominator polynomial into linear and quadratic factors over the real numbers. Alternatively, factoring over the complex numbers is possible, resulting in terms like:
