--- a/quarto/derivatives/mean_value_theorem.qmd
+++ b/quarto/derivatives/mean_value_theorem.qmd
@@ -548,13 +548,13 @@ numericq(c)
 ###### Question
 
 
-The extreme value theorem is a guarantee of a value, but does not provide a recipe to find it. For the function $f(x) = \cos(x)$ on $I=[\pi, 3\pi/2]$ find a value $c$ satisfying the theorem for an absolute maximum.
+The extreme value theorem is a guarantee of a value, but does not provide a recipe to find it. For the function $f(x) = \cos(x)$ on $I=[\pi, 3\pi/2]$ find a value $c$ in $I$ for which $f(x)$ has its maximum value.
 
 
 ```{julia}
 #| hold: true
 #| echo: false
-c = 1pi
+c = 3pi/2
 numericq(c)
 ```
 
@@ -628,7 +628,7 @@ Suppose $f''(x) > 0$ on $I$. Why is it impossible that $f'(x) = 0$ at more than 
 choices = [
 L"It isn't. The function $f(x) = x^2$ has two zeros and $f''(x) = 2 > 0$",
 "By the Rolle's theorem, there is at least one, and perhaps more",
-L"By the mean value theorem, we must have $f'(b) - f'(a) > 0$ when ever $b > a$. This means $f'(x)$ is increasing and can't double back to have more than one zero."
+L"By the mean value theorem, we must have $f'(b) - f'(a) > 0$ whenever $b > a$. This means $f'(x)$ is increasing and can't double back to have more than one zero."
 ]
 answ = 3
 radioq(choices, answ)
@@ -675,7 +675,7 @@ radioq(choices, answ)
 ###### Question
 
 
-In an example, we used the fact that if $0 < c < x$, for some $c$ given by the mean value theorem and $f(x)$ goes to $0$ as $x$ goes to zero then $f(c)$ will also go to zero. Suppose we say that $c=g(x)$ for some function $c$.
+In an example, we used the fact that if $0 < c < x$, for some $c$ given by the mean value theorem and $f(x)$ goes to $0$ as $x$ goes to zero then $f(c)$ will also go to zero. As $c$ depends on $x$, suppose we write $c=g(x)$ for some function $g$.
 
 
 Why is it known that $g(x)$ goes to $0$ as $x$ goes to zero (from the right)?
