--- a/quarto/integrals/mean_value_theorem.qmd
+++ b/quarto/integrals/mean_value_theorem.qmd
@@ -200,7 +200,7 @@ What integral will show the intuition of the Merton College scholars that the di
 #| hold: true
 #| echo: false
 choices = [
-"``\\int_0^t v(u) du = v^2/2 \\big|_0^t``",
+"``\\int_0^t (v_0 + au) du = (v_0 t + a\cdot u^2/2)\\big|_0^t``",
 "``\\int_0^t (v(0) + v(u))/2 du = v(0)/2\\cdot t + x(u)/2\\ \\big|_0^t``",
 "``(v(0) + v(t))/2 \\cdot \\int_0^t du = (v(0) + v(t))/2 \\cdot t``"
 ]
