update volumes_slice.qmd some typos.

--- a/quarto/integrals/volumes_slice.qmd
+++ b/quarto/integrals/volumes_slice.qmd
@@ -56,7 +56,7 @@ Then the volume would be found by adding:
 
 
 $$
-V = \pi \cdot r_1^2 \cdot h_1 + \pi \cdot r_2^2 \cdot h_2 + \cdot + \pi \cdot r_n^2 \cdot h_n.
+V = \pi \cdot r_1^2 \cdot h_1 + \pi \cdot r_2^2 \cdot h_2 + \cdots + \pi \cdot r_n^2 \cdot h_n.
 $$
 
 The weight would come by multiplying the volume by some appropriate density.
@@ -299,7 +299,7 @@ Vₜ, _ = quadgk(h -> pi * rad(h)^2, 0, 50)
 For the actual shoot, the vase is to be filled with ash, to simulate a funeral urn. (It will then be knocked over in a humorous manner, of course.) How much ash is needed if the vase has walls that are 1/2 centimeter thick
 
 
-We need to subtract $0.5$ from the radius and `a` then recompute:
+We need to subtract $0.5$ from the radius and `h` then recompute:
 
 
 ```{julia}
@@ -432,7 +432,7 @@ So the integral becomes:
 
 
 $$
-V = \int_0^h A_{xc}(u) du = A_{xc}(0) \int_0^h (1 - \frac{u}{h})^2 du = A_{xc}(0) \int_0^1 v^2 \frac{1}{h} dv = A_{xc}(0) \frac{h}{3}.
+V = \int_0^h A_{xc}(u) du = A_{xc}(0) \int_0^h (1 - \frac{u}{h})^2 du = A_{xc}(0) \int_0^1 v^2 h dv = A_{xc}(0) \frac{h}{3}.
 $$
 
 This gives a general formula for the volume of such cones.
@@ -618,12 +618,12 @@ h225 = find_zero(h -> r_vol(h) - 225, 10)
 numericq(h225)
 ```
 
-  * For the straight-sided glass, what is the percentage of the total height when the glass is half full. (For a cylinder it would just be 50.
+  * For the straight-sided glass, what is the percentage of the total height when the glass is half full. (For a cylinder it would just be 50.)
 
 
 ```{julia}
 #| echo: false
-numericq(h225/450 * 100, 2, units="percent")
+numericq(h225/h450 * 100, 2, units="percent")
 ```
 
   * People often confuse the half-way by height amount for the half way by volume, as it is for the cylinder. Take the height for the straight-sided glass filled with $450$ mm, divide it by $2$, then compute the percentage of volume at the half way height to the original.
@@ -655,12 +655,12 @@ h_225 = find_zero(h -> s_vol(h) - 225, 10)
 numericq(h_225)
 ```
 
-  * For the curved-sided glass, what is the percentage of the total height when the glass is half full. (For a cylinder it would just be 50.
+  * For the curved-sided glass, what is the percentage of the total height when the glass is half full. (For a cylinder it would just be 50.)
 
 
 ```{julia}
 #| echo: false
-numericq(h_225/450 * 100, 2, units="percent")
+numericq(h_225/h_450 * 100, 2, units="percent")
 ```
 
   * People often confuse the half-way by height amount for the half way by volume, as it is for the cylinder. Take the height for the curved-sided glass filled with $450$ mm, divide it by $2$, then compute the percentage of volume at the half way height to the original.
@@ -771,7 +771,7 @@ plot!(x-1)
 #| echo: false
 Ra(y) = cbrt(y+1)
 ra(y) = y + 1
-a,b = 0, 1
+a,b = -1, 0
 val, _ = quadgk(x -> pi * (Ra(x)^2 - ra(x)^2), a,b)
 numericq(val)
 ```
